// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SQL API Postgres (Data) SELECT COUNT(*) as cn, "status" FROM Orders GROUP BY 2 ORDER BY cn DESC: sql_orders 1`] = `
Array [
  Object {
    "cn": "2",
    "status": "processed",
  },
  Object {
    "cn": "2",
    "status": "new",
  },
  Object {
    "cn": "1",
    "status": "shipped",
  },
]
`;

exports[`SQL API Postgres (Data) date/string measures in view: date case 1`] = `
Array [
  Object {
    "val": "2024-01-01T00:00:00.000",
  },
  Object {
    "val": "2024-01-02T00:00:00.000",
  },
  Object {
    "val": "2024-01-03T00:00:00.000",
  },
  Object {
    "val": "2024-01-04T00:00:00.000",
  },
  Object {
    "val": "2024-01-05T00:00:00.000",
  },
]
`;

exports[`SQL API Postgres (Data) date/string measures in view: string case 1`] = `
Array [
  Object {
    "val": "1 / 100",
  },
  Object {
    "val": "1 / 200",
  },
  Object {
    "val": "1 / 300",
  },
  Object {
    "val": "1 / 500",
  },
  Object {
    "val": "1 / 600",
  },
]
`;

exports[`SQL API Postgres (Data) join with filtered grouped query: join grouped with filter 1`] = `
Array [
  Object {
    "count": "2",
    "status": "processed",
  },
  Object {
    "count": "2",
    "status": "new",
  },
]
`;

exports[`SQL API Postgres (Data) join with grouped query on coalesce: join grouped on coalesce 1`] = `
Array [
  Object {
    "count": "2",
    "status": "processed",
  },
  Object {
    "count": "1",
    "status": "shipped",
  },
]
`;

exports[`SQL API Postgres (Data) join with grouped query: join grouped 1`] = `
Array [
  Object {
    "count": "2",
    "status": "processed",
  },
  Object {
    "count": "1",
    "status": "shipped",
  },
]
`;

exports[`SQL API Postgres (Data) metabase max number: metabase max number 1`] = `
Array [
  Object {
    "id": 2,
    "numberTotal": 200,
    "pivot-grouping": 0,
    "status": "new",
  },
  Object {
    "id": 1,
    "numberTotal": 100,
    "pivot-grouping": 0,
    "status": "new",
  },
]
`;

exports[`SQL API Postgres (Data) no limit for non matching count push down: no limit for non matching count push down 1`] = `
Array [
  Object {
    "a0": 2024-01-05T00:00:00.000Z,
    "a1": 2024-01-01T00:00:00.000Z,
    "a2": "100000",
  },
]
`;

exports[`SQL API Postgres (Data) percentage of total sum: percentage of total sum 1`] = `
Array [
  Object {
    "m0": 1,
  },
]
`;

exports[`SQL API Postgres (Data) power bi multi stage measure wrap: power bi post aggregate measure wrap 1`] = `
Array [
  Object {
    "a0": 1,
    "a1": "2024-01-05T00:00:00.000",
    "createdAt": 2024-01-05T00:00:00.000Z,
  },
]
`;

exports[`SQL API Postgres (Data) powerbi min max push down: powerbi_min_max_push_down 1`] = `
Array [
  Object {
    "a0": 2024-01-05T00:00:00.000Z,
    "a1": 2024-01-01T00:00:00.000Z,
  },
]
`;

exports[`SQL API Postgres (Data) query views with deep joins: query-view-deep-joins 1`] = `
Array [
  Object {
    "Calculation_1055547778125863": 2024-01-01T00:00:00.000Z,
    "Orders_arpu": null,
    "Orders_netCollectionCompleted": null,
    "Orders_refundRate": 0,
  },
]
`;

exports[`SQL API Postgres (Data) query with intervals (SQL PUSH DOWN): timestamps 1`] = `
Array [
  Object {
    "c0": 2035-01-01T00:00:00.000Z,
    "c1": 2025-11-01T00:00:00.000Z,
    "c2": 2033-09-01T00:00:00.000Z,
    "c3": 2024-01-06T12:01:50.000Z,
    "c4": 2024-12-27T04:00:00.000Z,
    "c5": 2025-10-01T00:04:19.245Z,
    "c6": 2024-01-01T00:02:15.795Z,
    "c7": 2024-01-23T00:02:15.795Z,
    "c8": 2026-10-23T00:02:15.795Z,
    "d": "2024-01-01 :",
  },
  Object {
    "c0": 2035-01-02T00:00:00.000Z,
    "c1": 2025-11-02T00:00:00.000Z,
    "c2": 2033-09-02T00:00:00.000Z,
    "c3": 2024-01-07T12:01:50.000Z,
    "c4": 2024-12-28T04:00:00.000Z,
    "c5": 2025-10-02T00:04:19.245Z,
    "c6": 2024-01-02T00:02:15.795Z,
    "c7": 2024-01-24T00:02:15.795Z,
    "c8": 2026-10-24T00:02:15.795Z,
    "d": "2024-01-02 :",
  },
  Object {
    "c0": 2035-01-03T00:00:00.000Z,
    "c1": 2025-11-03T00:00:00.000Z,
    "c2": 2033-09-03T00:00:00.000Z,
    "c3": 2024-01-08T12:01:50.000Z,
    "c4": 2024-12-29T04:00:00.000Z,
    "c5": 2025-10-03T00:04:19.245Z,
    "c6": 2024-01-03T00:02:15.795Z,
    "c7": 2024-01-25T00:02:15.795Z,
    "c8": 2026-10-25T00:02:15.795Z,
    "d": "2024-01-03 :",
  },
  Object {
    "c0": 2035-01-04T00:00:00.000Z,
    "c1": 2025-11-04T00:00:00.000Z,
    "c2": 2033-09-04T00:00:00.000Z,
    "c3": 2024-01-09T12:01:50.000Z,
    "c4": 2024-12-30T04:00:00.000Z,
    "c5": 2025-10-04T00:04:19.245Z,
    "c6": 2024-01-04T00:02:15.795Z,
    "c7": 2024-01-26T00:02:15.795Z,
    "c8": 2026-10-26T00:02:15.795Z,
    "d": "2024-01-04 :",
  },
  Object {
    "c0": 2035-01-05T00:00:00.000Z,
    "c1": 2025-11-05T00:00:00.000Z,
    "c2": 2033-09-05T00:00:00.000Z,
    "c3": 2024-01-10T12:01:50.000Z,
    "c4": 2024-12-31T04:00:00.000Z,
    "c5": 2025-10-05T00:04:19.245Z,
    "c6": 2024-01-05T00:02:15.795Z,
    "c7": 2024-01-27T00:02:15.795Z,
    "c8": 2026-10-27T00:02:15.795Z,
    "d": "2024-01-05 :",
  },
]
`;

exports[`SQL API Postgres (Data) query with intervals: timestamps 1`] = `
Array [
  Object {
    "c0": 2035-01-01T00:00:00.000Z,
    "c1": 2025-11-01T00:00:00.000Z,
    "c2": 2033-09-01T00:00:00.000Z,
    "c3": 2024-01-06T12:01:50.000Z,
    "c4": 2025-10-01T00:04:19.245Z,
    "timestamp": 2024-01-01T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-02T00:00:00.000Z,
    "c1": 2025-11-02T00:00:00.000Z,
    "c2": 2033-09-02T00:00:00.000Z,
    "c3": 2024-01-07T12:01:50.000Z,
    "c4": 2025-10-02T00:04:19.245Z,
    "timestamp": 2024-01-02T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-03T00:00:00.000Z,
    "c1": 2025-11-03T00:00:00.000Z,
    "c2": 2033-09-03T00:00:00.000Z,
    "c3": 2024-01-08T12:01:50.000Z,
    "c4": 2025-10-03T00:04:19.245Z,
    "timestamp": 2024-01-03T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-04T00:00:00.000Z,
    "c1": 2025-11-04T00:00:00.000Z,
    "c2": 2033-09-04T00:00:00.000Z,
    "c3": 2024-01-09T12:01:50.000Z,
    "c4": 2025-10-04T00:04:19.245Z,
    "timestamp": 2024-01-04T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-05T00:00:00.000Z,
    "c1": 2025-11-05T00:00:00.000Z,
    "c2": 2033-09-05T00:00:00.000Z,
    "c3": 2024-01-10T12:01:50.000Z,
    "c4": 2025-10-05T00:04:19.245Z,
    "timestamp": 2024-01-05T00:00:00.000Z,
  },
]
`;

exports[`SQL API Postgres (Data) select __user and literal grouped under wrapper: select __user and literal in wrapper 1`] = `
Array [
  Object {
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "new",
    "my_user": null,
  },
  Object {
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "processed",
    "my_user": null,
  },
  Object {
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "shipped",
    "my_user": null,
  },
]
`;

exports[`SQL API Postgres (Data) select __user and literal grouped: select __user and literal 1`] = `
Array [
  Object {
    "Int64(2)": "2",
    "__cubeJoinField": null,
    "datetrunc(Utf8(\\"day\\"),Orders.createdAt)": 2024-01-01T00:00:00.000Z,
    "id": 1,
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "new",
    "my_user": null,
  },
  Object {
    "Int64(2)": "2",
    "__cubeJoinField": null,
    "datetrunc(Utf8(\\"day\\"),Orders.createdAt)": 2024-01-02T00:00:00.000Z,
    "id": 2,
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "new",
    "my_user": null,
  },
  Object {
    "Int64(2)": "2",
    "__cubeJoinField": null,
    "datetrunc(Utf8(\\"day\\"),Orders.createdAt)": 2024-01-03T00:00:00.000Z,
    "id": 3,
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "processed",
    "my_user": null,
  },
  Object {
    "Int64(2)": "2",
    "__cubeJoinField": null,
    "datetrunc(Utf8(\\"day\\"),Orders.createdAt)": 2024-01-04T00:00:00.000Z,
    "id": 4,
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "processed",
    "my_user": null,
  },
  Object {
    "Int64(2)": "2",
    "__cubeJoinField": null,
    "datetrunc(Utf8(\\"day\\"),Orders.createdAt)": 2024-01-05T00:00:00.000Z,
    "id": 5,
    "my_created_at": 2024-01-01T00:00:00.000Z,
    "my_literal": "1",
    "my_status": "shipped",
    "my_user": null,
  },
]
`;

exports[`SQL API Postgres (Data) select null in subquery with streaming 1`] = `
Array [
  Object {
    "usr": null,
    "val": 789,
  },
  Object {
    "usr": null,
    "val": 987,
  },
]
`;

exports[`SQL API Postgres (Data) tableau bi fiscal year query: result 1`] = `
Array [
  Object {
    "status": "new",
    "yr:created_at:ok": 2024,
  },
  Object {
    "status": "processed",
    "yr:created_at:ok": 2024,
  },
  Object {
    "status": "shipped",
    "yr:created_at:ok": 2024,
  },
]
`;

exports[`SQL API Postgres (Data) wrapper with duplicated members: wrapper-duplicated-members 1`] = `
Array [
  Object {
    "bar": "shipped",
    "bar_expr": "0",
    "foo": "shipped",
  },
]
`;
